--- a/and-bible/app/src/main/res/values-es/strings.xml
+++ b/and-bible/app/src/main/res/values-es/strings.xml
@@ -158,8 +158,10 @@
   <!--Bookmarks-->
   <string name="bookmarks">Marcadores</string>
   <string name="add_bookmark">Añadir marcador</string>
+  <string name="delete_bookmark">Eliminar marcador</string>
   <string name="bookmark_added">Marcador añadido</string>
   <string name="bookmark_exists">Ya existe el marcador</string>
+  <string name="bookmark_deleted">Marcador eliminado</string>
   <string name="bookmark_labels">Etiquetas de marcador</string>
   <string name="assign_labels">Asignar etiquetas</string>
   <string name="new_label">Nueva etiqueta</string>
