--- a/and-bible/app/src/main/res/values-ml/strings.xml
+++ b/and-bible/app/src/main/res/values-ml/strings.xml
@@ -11,7 +11,7 @@
   <string name="selectPassage">ഭാഗം</string>
   <string name="search">കണ്ടുപിടിക്കുക</string>
   <string name="settings">സെറ്റിങ്ങ്സ്</string>
-  <string name="history">പഴയ ഭാഗങ്ങൾ</string>
+  <string name="history">കഴിഞ്ഞ വായനകൾ</string>
   <string name="speak">വായിക്കുക</string>
   <string name="help">സഹായം</string>
   <string name="verse">വാക്യം</string>
@@ -150,13 +150,17 @@
   <string name="delete_search_index_doc">പട്ടിക നീക്കി കളയുക %s?</string>
   <!--Verse context menu-->
   <string name="notes">അടിക്കുറിപ്പും സൂചനകളും</string>
+  <string name="copy">കോപ്പി</string>
+  <string name="share_verse">പങ്കിടുക</string>
   <string name="share_verse_subject">And Bible ഉപയ്യോഗിച്ചാണു ഈ വേദവാക്യം നിങ്ങളുമായി പങ്കുവെച്ചതു</string>
   <string name="compare_translations">പരിഭാഷ താരതമ്യം ചെയ്യുക</string>
   <!--Bookmarks-->
-  <string name="bookmarks">പുസ്തക അടയാളങ്ങൾ</string>
-  <string name="add_bookmark">പുസ്തക അടയാളങ്ങൾ ചേർക്കക</string>
+  <string name="bookmarks">പുസ്തകസൂചിക</string>
+  <string name="add_bookmark">പുസ്തകസൂചിക ചേർക്കക</string>
+  <string name="delete_bookmark">പുസ്തകസൂചിക മാറ്റുക</string>
   <string name="bookmark_added">പുസ്തകസൂചിക  ചേർത്തു</string>
   <string name="bookmark_exists">പുസ്തകസൂചിക നിലവിലുണ്ട്</string>
+  <string name="bookmark_deleted">പുസ്തകസൂചിക മാറ്റിയ</string>
   <string name="bookmark_labels">പുസ്തകസൂചിക-ശീർഷകങ്ങൾ</string>
   <string name="assign_labels">ശീർഷകം നിർണ്ണയിക്കുക</string>
   <string name="new_label">പുതിയ ശീർഷകം </string>
@@ -208,6 +212,7 @@
   <string name="restore_confirmation"> എന്റെ കുറിപ്പുകളും സൂചകങ്ങളും വീണ്ടും ഒന്നുകൂടി എഴുതുണമോ?</string>
   <string name="restore_success">എന്റെ കുറിപ്പുകളും സൂചകങ്ങളും SD കാർഡിൽ %s -ൽ നിന്നും പുനഃരുദ്ധരിച്ചു</string>
   <!--About-->
+  <string name="about_copyright">പകർപ്പവകാശ %s</string>
   <string name="about_version">പതിപ്പ്: %s</string>
   <string name="about_versification">വാക്യം ക്രമീകരണം: %s</string>
   <!--Document types-->
@@ -234,6 +239,7 @@
   <string name="new_item">പുതിയ</string>
   <string name="close">അടക്കുക</string>
   <!--Errors-->
+  <string name="report_error">റിപ്പോർട്ട് അയയ്ക്കുക</string>
   <string name="error_occurred">ഒരു തെറ്റ് പറ്റിയിരിക്കുന്നു</string>
   <string name="error_no_content">തിരഞ്ഞ ഈ വാക്യം ശുന്യമാണു</string>
   <string name="error_page_too_large">ഉൾക്കൊള്ളിക്കാൻ കഴിയുന്നതിലും വളരെ വലിയതാണ്‌</string>
