--- a/and-bible/app/src/main/res/values-sv/strings.xml
+++ b/and-bible/app/src/main/res/values-sv/strings.xml
@@ -159,8 +159,10 @@
   <!--Bookmarks-->
   <string name="bookmarks">Bokmärken</string>
   <string name="add_bookmark">Lägg till bokmärke</string>
+  <string name="delete_bookmark">Radera bokmärke</string>
   <string name="bookmark_added">Bokmärket sparat</string>
   <string name="bookmark_exists">Bokmärket finns redan</string>
+  <string name="bookmark_deleted">Bokmärket raderat</string>
   <string name="bookmark_labels">Bokmärkesetiketter</string>
   <string name="assign_labels">Tilldela etiketter</string>
   <string name="new_label">Ny etikett</string>
